nearly finished header and menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>No Filter (test)</title>
@@ -8,9 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="https://use.fontawesome.com/d23f3add95.js"></script>
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
@@ -21,11 +24,26 @@
 
 <header>
 
-  <h1 class="title"> No Filter </h1> 
+  <h1 class="title"> No Filter </h1>
   <h2 class="subheading"> A non-fiction zine</h2>
 
+  <div class="menu">
+    <ul>
+      <li><a href="#">Categories</a></li>
+      <li><a href="#">Submissions</a></li>
+      <li><a href="#">About</a></li>
+    </ul>
 
-</header> 
+    <span class="line"></span>
+
+    <form>
+      <div class="search-container">
+        <span class="icon"><i class="fa fa-search"></i></span>
+        <input type="search" name="search" value="Search for stuff here">
+      </div>
+    </form>
+  </div>
+</header>
 
 
 
@@ -38,12 +56,14 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!
+          If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
       </div>
     </div>
   </div>
 
-<!-- End Document
+  <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
+
 </html>
