--- a/index.html
+++ b/index.html
@@ -21,43 +21,59 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
-<header>
-
-  <h1 class="title"> No Filter </h1>
-  <h2 class="subheading"> A non-fiction zine</h2>
-
-  <div class="menu">
-    <ul>
-      <li><a href="#">Categories</a></li>
-      <li><a href="#">Submissions</a></li>
-      <li><a href="#">About</a></li>
-    </ul>
-
-    <span class="line"></span>
-
-    <form>
-      <div class="search-container">
-        <span class="icon"><i class="fa fa-search"></i></span>
-        <input type="search" name="search" value="Search for stuff here">
-      </div>
-    </form>
-  </div>
-</header>
-
-
-
-
-
 <body>
+  <header>
+
+    <h1 class="title"> No Filter </h1>
+    <h2 class="subheading"> A non-fiction zine</h2>
+
+    <div class="menu">
+      <ul>
+        <li><a href="#">Categories</a></li>
+        <li><a href="#">Submissions</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+
+      <span class="line"></span>
+
+      <form>
+        <div class="search-container">
+          <span class="icon"><i class="fa fa-search"></i></span>
+          <input type="search" name="search" value="Search for stuff here">
+        </div>
+      </form>
+    </div>
+  </header>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content!
-          If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+
+      <div class="six columns card">
+        <img class="preview" src="images/hotsnatch.png" alt="hotsnatch team">
+        <div class="text">
+          <p class="tag">>>Revelations</p>
+          <h3>Tottenham Hotsnatch: So much more than a ladies football team</h3>
+          <h4>'Snatch' doesn't even rhyme with 'Spurs'. It also doesn't roll off the tongue like the second contender (West Hamflaps)
+            does. I think the unapologetic lewdness of this makes the name even better.</h4>
+          <p class="byline">Written by: Alice A.</p>
+          <p class="reading-time">Reading time: 5 mins</p>
+        </div>
       </div>
+
+      <div class="six columns card">
+        <img class="preview" src="images/hotsnatch.png" alt="hotsnatch team">
+        <div class="text">
+          <p class="tag">>>Revelations</p>
+          <h3>Tottenham Hotsnatch: So much more than a ladies football team</h3>
+          <h4>'Snatch' doesn't even rhyme with 'Spurs'. It also doesn't roll off the tongue like the second contender (West Hamflaps)
+            does. I think the unapologetic lewdness of this makes the name even better.</h4>
+          <p class="byline">Written by: Alice A.</p>
+          <p class="reading-time">Reading time: 5 mins</p>
+        </div>
+      </div>
+
+
     </div>
   </div>
 
