desktop cards done

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
   </header>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
 
-      <div class="six columns card">
-        <img class="preview" src="images/hotsnatch.png" alt="hotsnatch team">
+  <main>
+
+      <div class="card">
+        <img class="thumbnail" src="images/hotsnatch.png" alt="hotsnatch team">
         <div class="text">
           <p class="tag">>>Revelations</p>
           <h3>Tottenham Hotsnatch: So much more than a ladies football team</h3>
@@ -61,8 +61,8 @@
         </div>
       </div>
 
-      <div class="six columns card">
-        <img class="preview" src="images/hotsnatch.png" alt="hotsnatch team">
+      <div class="card right">
+        <img class="thumbnail" src="images/hotsnatch.png" alt="hotsnatch team">
         <div class="text">
           <p class="tag">>>Revelations</p>
           <h3>Tottenham Hotsnatch: So much more than a ladies football team</h3>
@@ -72,10 +72,12 @@
           <p class="reading-time">Reading time: 5 mins</p>
         </div>
       </div>
+    
+    </main>
 
 
-    </div>
-  </div>
+  
+  
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
