--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
   <main>
 
+<div class="my-row">
+
       <div class="card">
         <img class="thumbnail" src="images/hotsnatch.png" alt="hotsnatch team">
         <div class="text">
@@ -72,6 +74,44 @@
           <p class="reading-time">Reading time: 5 mins</p>
         </div>
       </div>
+
+</div>
+
+
+<div class="my-row">
+
+      <div class="card">
+        <img class="thumbnail" src="images/hotsnatch.png" alt="hotsnatch team">
+        <div class="text">
+          <p class="tag">>>Revelations</p>
+          <h3>Tottenham Hotsnatch: So much more than a ladies football team</h3>
+          <h4>'Snatch' doesn't even rhyme with 'Spurs'. It also doesn't roll off the tongue like the second contender (West Hamflaps)
+            does. I think the unapologetic lewdness of this makes the name even better.</h4>
+          <p class="byline">Written by: Alice A.</p>
+          <p class="reading-time">Reading time: 5 mins</p>
+        </div>
+      </div>
+
+      <div class="card right">
+        <img class="thumbnail" src="images/hotsnatch.png" alt="hotsnatch team">
+        <div class="text">
+          <p class="tag">>>Revelations</p>
+          <h3>Tottenham Hotsnatch: So much more than a ladies football team</h3>
+          <h4>'Snatch' doesn't even rhyme with 'Spurs'. It also doesn't roll off the tongue like the second contender (West Hamflaps)
+            does. I think the unapologetic lewdness of this makes the name even better.</h4>
+          <p class="byline">Written by: Alice A.</p>
+          <p class="reading-time">Reading time: 5 mins</p>
+        </div>
+      </div>
+
+</div>
+
+ 
+
+  
+
+      
+
     
     </main>
 
