added new content and fixed css

--- a/index.html
+++ b/index.html
@@ -49,7 +49,36 @@
 
   <main>
 
-<div class="my-row">
+    <div class="my-row">
+
+      <div class="card">
+        <img class="thumbnail" src="images/hotsnatch.png" alt="hotsnatch team">
+        <div class="text">
+          <p class="tag">>>Revelations</p>
+          <h3>Tottenham Hotsnatch: So <br> much more than a ladies <br> football team</h3>
+          <h4>'Snatch' doesn't even rhyme with 'Spurs'. It also doesn't roll off the tongue like the second contender (West Hamflaps)
+            does. I think the unapologetic lewdness of this makes the name even better.</h4>
+          <p class="byline">Written by: Alice A.</p>
+          <p class="reading-time">Reading time: 5 mins</p>
+        </div>
+      </div>
+
+      <div class="card right">
+        <img class="thumbnail" src="images/berlin.jpeg" alt="berlin">
+        <div class="text">
+          <p class="tag">>>Revelations</p>
+          <h3>Why quitting my job in London and moving to Berlin solved all of my problems </h3>
+          <h4>I called my mum first and then my dad. "I'm moving to Berlin!" "Erm okay! Do you speak any German?" They said.
+            "No", I said.</h4>
+          <p class="byline">Written by: Alice A.</p>
+          <p class="reading-time">Reading time: 5 mins</p>
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="my-row">
 
       <div class="card">
         <img class="thumbnail" src="images/hotsnatch.png" alt="hotsnatch team">
@@ -70,54 +99,24 @@
           <h3>Tottenham Hotsnatch: So much more than a ladies football team</h3>
           <h4>'Snatch' doesn't even rhyme with 'Spurs'. It also doesn't roll off the tongue like the second contender (West Hamflaps)
             does. I think the unapologetic lewdness of this makes the name even better.</h4>
+
           <p class="byline">Written by: Alice A.</p>
           <p class="reading-time">Reading time: 5 mins</p>
+
         </div>
       </div>
 
-</div>
+    </div>
+
+  </main>
+
+  <footer>
+
+  </footer>
 
 
-<div class="my-row">
-
-      <div class="card">
-        <img class="thumbnail" src="images/hotsnatch.png" alt="hotsnatch team">
-        <div class="text">
-          <p class="tag">>>Revelations</p>
-          <h3>Tottenham Hotsnatch: So much more than a ladies football team</h3>
-          <h4>'Snatch' doesn't even rhyme with 'Spurs'. It also doesn't roll off the tongue like the second contender (West Hamflaps)
-            does. I think the unapologetic lewdness of this makes the name even better.</h4>
-          <p class="byline">Written by: Alice A.</p>
-          <p class="reading-time">Reading time: 5 mins</p>
-        </div>
-      </div>
-
-      <div class="card right">
-        <img class="thumbnail" src="images/hotsnatch.png" alt="hotsnatch team">
-        <div class="text">
-          <p class="tag">>>Revelations</p>
-          <h3>Tottenham Hotsnatch: So much more than a ladies football team</h3>
-          <h4>'Snatch' doesn't even rhyme with 'Spurs'. It also doesn't roll off the tongue like the second contender (West Hamflaps)
-            does. I think the unapologetic lewdness of this makes the name even better.</h4>
-          <p class="byline">Written by: Alice A.</p>
-          <p class="reading-time">Reading time: 5 mins</p>
-        </div>
-      </div>
-
-</div>
-
- 
-
-  
-
-      
-
-    
-    </main>
 
 
-  
-  
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
