--- a/index.html
+++ b/index.html
@@ -110,6 +110,23 @@
 
   </main>
 
+
+  <div class="center">
+
+    <div class="pagination">
+      <a href="#" class="older">&laquo; Read older</a>
+      <a href="#">1</a>
+      <a href="#" class="active">2</a>
+      <a href="#">3</a>
+      <a href="#">4</a>
+      <a href="#">5</a>
+      <a href="#" class="newer" > Read newer &raquo;</a>
+
+    </div>
+
+  </div>
+
+
   <footer>
 
   </footer>
