first row of footer

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <a href="#">3</a>
       <a href="#">4</a>
       <a href="#">5</a>
-      <a href="#" class="newer" > Read newer &raquo;</a>
+      <a href="#" class="newer"> Read newer &raquo;</a>
 
     </div>
 
@@ -128,6 +128,29 @@
 
 
   <footer>
+
+<div class="flex-grid">
+  <div class="col footer-title-container">
+    <p id="footer-title">No filter</p>
+      <p id="footer-subtitle">A non-fiction zine</p>
+
+      <p id="copyright">Copyright &copy; 2017 No Filter. All Rights Reserved </p>
+  </div>
+  
+  <div class="col">
+    Hello
+  </div>
+
+  <div class="col">
+    Test
+  </div>
+
+  <div class="col">
+    Bum
+  </div>
+
+</div>
+
 
   </footer>
 
