--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
       <p id="copyright">Copyright &copy; 2017 No Filter. All Rights Reserved </p>
   </div>
   
-  <div class="col">
-    Hello
+  <div class="col" id="social-container">
+      <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+      <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+      <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
   </div>
 
   <div class="col">
