--- a/index.html
+++ b/index.html
@@ -129,29 +129,39 @@
 
   <footer>
 
-<div class="flex-grid">
-  <div class="col footer-title-container">
-    <p id="footer-title">No filter</p>
-      <p id="footer-subtitle">A non-fiction zine</p>
+    <div class="flex-grid">
+      <div class="col footer-title-container">
+        <p id="footer-title">No filter</p>
+        <p id="footer-subtitle">A non-fiction zine</p>
 
-      <p id="copyright">Copyright &copy; 2017 No Filter. All Rights Reserved </p>
-  </div>
-  
-  <div class="col" id="social-container">
-      <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
-      <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-      <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-  </div>
+        <p id="copyright">Copyright &copy; 2017 No Filter. All Rights Reserved </p>
+      </div>
 
-  <div class="col">
-    Test
-  </div>
+      <div class="col" id="social-container">
+        <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+      </div>
 
-  <div class="col">
-    Bum
-  </div>
+      <div class="col categories-footer">
+        <p class="footer-list-title"> Categories </p>
+        <ul class="footer-list">
+          <li><a href="#">Revelations</a></li>
+          <li><a href="#">Recollections</a></li>
+          <li><a href="#">Rants</a></li>
+          <li><a href="#">Raves</a></li>
+        </ul>
+      </div>
 
-</div>
+      <div class="col">
+        <p class="footer-list-title"> Content </p>
+        <ul class="footer-list">
+          <li><a href="#">Submissions</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </div>
+
+    </div>
 
 
   </footer>
