hamburger mobile menu

--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
     <h1 class="title"> No Filter </h1>
     <h2 class="subheading"> A non-fiction zine</h2>
 
+
+
     <div class="menu">
       <ul>
         <li><a href="#">Categories</a></li>
         <li><a href="#">Submissions</a></li>
         <li><a href="#">About</a></li>
       </ul>
+
 
       <span class="line"></span>
 
@@ -43,6 +46,20 @@
         </div>
       </form>
     </div>
+
+
+    <!-- RESPONSIVE MENU -->
+    <button class="hamburger">&#9776;</button>
+    <button class="cross">&#735;</button>
+
+    <div class="responsive-menu">
+      <ul>
+        <li><a href="#">Categories</a></li>
+        <li><a href="#">Submissions</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
+
   </header>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -172,6 +189,13 @@
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+
+  <!-- Scripts -->
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="main.js"></script>
 </body>
+
+
 
 </html>
