testing image fix

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
 
       <div class="card right">
-        <img class="thumbnail" src="images/berlin.jpeg" alt="berlin">
+        <img class="thumbnail" src="nofilter/images/Berlin.jpeg" alt="berlin">
         <div class="text">
           <p class="tag">>>Revelations</p>
           <h3>Why quitting my job in London and moving to Berlin solved all of my problems </h3>
